[gd_scene load_steps=11 format=3 uid="uid://2wfvdsxq8pen"]

[ext_resource type="Script" path="res://scripts/menu_scene.gd" id="1_lvgol"]
[ext_resource type="PackedScene" uid="uid://bh170d1fqj6qr" path="res://scenes/parallax_background.tscn" id="1_q5qw1"]
[ext_resource type="PackedScene" uid="uid://k55754y80eds" path="res://scenes/parallax_background(dark).tscn" id="2_2s7cc"]
[ext_resource type="Script" path="res://scripts/parallax_background(dark).gd" id="3_c0t6u"]
[ext_resource type="Script" path="res://scripts/parallax_background.gd" id="3_dlep8"]
[ext_resource type="FontFile" uid="uid://cbop378hlk53u" path="res://font/Kaph_Font_1_20/Web Open Font Format (.woff)/Kaph-Italic.woff" id="3_xal55"]
[ext_resource type="AudioStream" uid="uid://cxnhw4skrad2" path="res://assets/Background Music/16-Bit Starter Pack/Overworld/Journey Across the Blue.ogg" id="5_elg0p"]
[ext_resource type="PackedScene" uid="uid://ba0xmh507wd3w" path="res://scenes/settings.tscn" id="6_yrl30"]
[ext_resource type="PackedScene" uid="uid://dc3u2rdfvp4un" path="res://save_load.tscn" id="8_shflq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aferk"]
draw_center = false

[node name="Menu Scene" type="Node2D"]
script = ExtResource("1_lvgol")

[node name="ParallaxBackground(DARK)" parent="." instance=ExtResource("2_2s7cc")]
visible = false
script = ExtResource("3_c0t6u")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_q5qw1")]
script = ExtResource("3_dlep8")

[node name="Game Name" type="Label" parent="."]
offset_left = 248.0
offset_top = 157.0
offset_right = 890.0
offset_bottom = 390.0
pivot_offset = Vector2(410, 73)
theme_override_colors/font_color = Color(0, 0, 0, 0.207843)
theme_override_colors/font_shadow_color = Color(0, 0.654241, 0.658029, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_aferk")
text = "NINJADOH
 "

[node name="Menu Sounds" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0

[node name="Menu BG Sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_elg0p")
autoplay = true

[node name="Save_Load" parent="." instance=ExtResource("8_shflq")]

[node name="Buttons" type="Control" parent="Save_Load"]
layout_mode = 3
anchors_preset = 0
offset_left = 481.0
offset_top = 124.0
offset_right = 521.0
offset_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="Save_Load/Buttons"]
layout_mode = 0
offset_left = -33.0
offset_top = 222.0
offset_right = 115.0
offset_bottom = 356.0
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Save_Load/Buttons/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="Save_Load/Buttons/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.94902, 0.807843, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 20
text = "PLAY
"
flat = true

[node name="Options" type="Button" parent="Save_Load/Buttons/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.94902, 0.807843, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 20
text = "OPTIONS
"
flat = true

[node name="Exit" type="Button" parent="Save_Load/Buttons/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.94902, 0.807843, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 20
text = "EXIT"
flat = true

[node name="NINJADOH tm" type="Label" parent="Save_Load/Buttons"]
layout_mode = 0
offset_left = 433.0
offset_top = -115.0
offset_right = 668.0
offset_bottom = -82.0
theme_override_colors/font_color = Color(0, 0, 0, 0.560784)
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 25
text = "NINJADOH INC.
"

[node name="Notes" type="Label" parent="Save_Load/Buttons"]
layout_mode = 0
offset_left = -358.0
offset_top = 243.0
offset_right = -49.0
offset_bottom = 394.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_xal55")
theme_override_font_sizes/font_size = 15
text = "New Features:
Dark Mode
Upgrades
total distance travelled
shuriken to attack
fix collisions with hitbox
some statistics.
"

[node name="Settings" parent="." instance=ExtResource("6_yrl30")]
visible = false
offset_left = 704.0
offset_top = 357.0
offset_right = 704.0
offset_bottom = 357.0

[node name="Button" parent="Settings/MarginContainer/VBoxContainer/Lightmode/MarginContainer/HBoxContainer" index="0"]
mouse_default_cursor_shape = 2

[node name="Button2" parent="Settings/MarginContainer/VBoxContainer/Lightmode/MarginContainer/HBoxContainer" index="1"]
mouse_default_cursor_shape = 2

[connection signal="mouse_entered" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Options" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Exit" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="Save_Load/Buttons/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/Lightmode/MarginContainer/HBoxContainer/Button" to="." method="_on_light_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/Lightmode/MarginContainer/HBoxContainer/Button2" to="." method="_on_dark_pressed"]

[editable path="Settings"]
[editable path="Settings/MarginContainer/VBoxContainer/Lightmode"]
